[metadata]
name = llama_evaluation
version = 0.0.1
description = Evaluation tools for LLM like llama.
long_description = file: README.md
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    loguru
    # math
    antlr4-python3-runtime==4.10
    sympy
    # front-end related
    streamlit
    streamlit-aggrid
    streamlit_option_menu
    torch
    tqdm
    transformers
    sentencepiece
    Levenshtein
    datasets==2.8.0
    fairscale==0.4.13
    safetensors==0.3.0
    pandas
    regex
    requests

[options.extras_require]
dev =
    flake8==3.8.3
    isort==4.3.21

[flake8]
max-line-length = 100
max-complexity = 18
exclude = __init__.py
